# mac_Gameleon

./: .gitignore  README.md  pyproject.toml  requirements-mac-cpu.txt
examples/0519/: README.md
mac_gameleon/: __init__.py  camera.py  device.py  mlx_sparse_poc.py  mlx_torchsparse_patch.py  paths.py  ply_gaussian.py  render_gsplat.py
patches/gameleon_geometry_cpu/: apply_patches.py
patches/minkowskiengine_v0.5.4/: apply_source_patches.sh  setup.py
patches/torchsparse_v2.0.0/: build_kmap.py  setup.py
scripts/: apply_gameleon_geometry_cpu_patches.sh  apply_torchsparse_patches.sh  env_mac_cpu.sh  geometry_mac.py  install_minkowski_cpu.sh  install_torchsparse_cpu.sh  render_gaussian_ply.py  setup_env.sh  test_gameleon_geometry_cpu.py  test_minkowski_cpu.py  test_mlx_sparse_poc.py  test_torchsparse_cpu.py  verify_phase0_env.py
