[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mac-gameleon"
version = "0.1.0"
description = "Mac Metal rendering helpers for Gameleon (gsplat-mlx backend)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "pillow>=9.0.0",
]

[project.optional-dependencies]
render = [
  "mlx>=0.31.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mac_gameleon*"]
